# BetaRoot-

./: ARCHITECTURE.md  BETA.md  BETAROOT_VS_LLM_COMPREHENSIVE.py  BetaRoot--main  BetaRoot_Product_Strategy.md  BetaRoot_Technical_Roadmap.md  BetaRoot_Use_Cases_Markets.md  CONTRIBUTING.md  DEFICIENCIES_SOLUTIONS.md  Distributed & Emergentmain.py  Dockerfile  ExplanationGenerator  FINAL_SUMMARY.md  GITHUB_SETUP.md  INDEX.md  PHASE1_LAUNCH_GUIDE.md  PHILOSOPHY.md  PRACTICAL_COMPARISONS.md  README.md  README_EN.md  ROADMAP.md  TEAM_RECRUITMENT.md  autoscale.yaml  betaroot.py  betaroot_omega.py  bootstrap_frequency.py  deployment.yaml  expert_system_complete.py  integration_example.py  main.py  main_expert_system.py  mkdocs.yml  mkdocstrings  publish.sh  pyproject.toml  pytest.ini  requirements.txt  run.py  run.sh  service.yaml  (+3 more)
agents/: explorer_agent.py  global_field_agent.py  learning_agent.py  multi_agent.py  reasoning_agent.py
betaroot/: __init__(self)  cli.py
consciousness/: human_bridge.py
core/: BBRI_Biological_Resonance_Integration.py  BETAROOT_VS_LLM_COMPARISON.md  CONSCIOUSNESS_INTEGRATION_GUIDE.md  CausalEngine  Consistency_Checker.py  CoreLoop  DEFICIENCIES_SOLUTIONS.md  GRAND_UNIFICATION_Framework.md  HybridSymbolicProbabilisticSolver  INTEGRATION_SUMMARY.md  LivingBetaRoot  LogicAtom  README_INTEGRATION(1).md  ResonanceMemory  SelfEvolutionCore  Symbolic_Patterns.py  SystemState  TimeLearning  __init__.py  _diff (1).gitignore  _diff.gitignore  aetheric_frequency_engine.py  bayesian_network_simulation_diff.py  bayesian_science_simulation_diff.py  betaroot.py  betaroot_BAYESIAN_INTEGRATION_diff.md  betaroot_core_bayesian_engine_diff.py  (+49 more)
(+153 files in other folders)
